# alex-db

./: .gitignore  Cargo.toml  README.md  coverage.sh
alex-db-client/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
alex-db-client/src/: connect.rs  context.rs  error.rs  lib.rs  main.rs
alex-db-client/src/requests/: values.rs
alex-db-lib/: CHANGELOG.md  Cargo.toml  README.md
alex-db-lib/benches/: append.rs  create.rs  decrement.rs  increment.rs  list.rs  pop_back.rs  pop_front.rs  prepend.rs  read.rs  update.rs
alex-db-lib/src/: config.rs  db.rs  db_record.rs  error.rs  index.rs  lib.rs  stat_record.rs  user_record.rs  value_index.rs  value_record.rs
alex-db-server/: .env  CHANGELOG.md  Cargo.toml  README.md
alex-db-server/src/: access.rs  app.rs  config.rs  error.rs  lib.rs  main.rs
alex-db-server/src/api/: mod.rs
alex-db-server/src/api/stats/: mod.rs  test.rs
alex-db-server/src/api/values/: mod.rs  test.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
