[package]
name = "alex-db-client"
version = "0.1.0"
edition = "2021"
categories = ["database"]
description = "AlexDB client."
homepage = "https://github.com/idiomatic-rust-com/alex-db"
keywords = ["client", "database"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/idiomatic-rust-com/alex-db"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
