[package]
name = "alex-db-client"
version = "0.1.0"
edition = "2021"
authors = ["Michal Piotrowski <michal@idiomatic-rust.com>"]
categories = ["database"]
description = "AlexDB client."
homepage = "https://github.com/idiomatic-rust-com/alex-db"
keywords = ["client", "database"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/idiomatic-rust-com/alex-db"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
