[package]
name = "alex-db-client"
version = "0.2.0"
edition = "2021"
authors = ["Michal Piotrowski <michal@idiomatic-rust.com>"]
categories = ["database"]
description = "AlexDB client."
homepage = "https://github.com/idiomatic-rust-com/alex-db"
keywords = ["client", "database"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/idiomatic-rust-com/alex-db"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alex-db-lib = { path = "../alex-db-lib" }
reedline-repl-rs = { version = "1.0", features = ["async"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
