[package]
name = "alex-db-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lz4_flex = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "2.4", features = ["chrono"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
