[package]
name = "alex-db-lib"
version = "0.1.0"
edition = "2021"
authors = ["Michal Piotrowski <michal@idiomatic-rust.com>"]
categories = ["database-implementations"]
description = "AlexDB library."
homepage = "https://github.com/idiomatic-rust-com/alex-db"
keywords = ["database", "library"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/idiomatic-rust-com/alex-db"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
lz4_flex = "0.9"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
utoipa = { version = "3.0", features = ["chrono"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
