[package]
name = "alex-db-lib"
version = "0.2.0"
edition = "2021"
authors = ["Michal Piotrowski <michal@idiomatic-rust.com>"]
categories = ["database-implementations"]
description = "AlexDB library."
homepage = "https://github.com/idiomatic-rust-com/alex-db"
keywords = ["database", "library"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/idiomatic-rust-com/alex-db"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
lz4_flex = "0.10"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "3.0", features = ["chrono"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "append"
harness = false

[[bench]]
name = "create"
harness = false

[[bench]]
name = "decrement"
harness = false

[[bench]]
name = "increment"
harness = false

[[bench]]
name = "list"
harness = false

[[bench]]
name = "pop_back"
harness = false

[[bench]]
name = "pop_front"
harness = false

[[bench]]
name = "prepend"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "update"
harness = false
