[package]
name = "alex-db-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alex-db-lib = { path = "../alex-db-lib" }
axum = "0.6"
axum-macros = "0.3"
chrono = { version = "0.4", features = ["serde"] }
fake = "2.5"
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "2.4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.0", features = ["axum"] }
