[package]
name = "alex-db-server"
version = "0.1.0"
edition = "2021"
categories = ["database-implementations"]
description = "AlexDB server."
homepage = "https://github.com/idiomatic-rust-com/alex-db"
keywords = ["database", "server"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/idiomatic-rust-com/alex-db"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alex-db-lib = { path = "../alex-db-lib" }
axum = { features = ["headers"], version = "0.6" }
axum-macros = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive", "env"] }
fake = "2.5"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.3", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "2.4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.0", features = ["axum"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
